For com conteúdo dos tuites

--- a/templates/home.html
+++ b/templates/home.html
@@ -3,10 +3,9 @@
 {% block body %}
     Olá mundo!
 
-    {% for number in "87878" %}
+    {% for tuite in tuites %}
         <div style="color: white;">
-            {{number}}
-            {% include 'includes/card.html' with content="number" author="Filho do Christiano Ronaldo" %}
+            {{ tuite }}
         </div>
     {% endfor %}
 {% endblock %}
