--- a/static/css/style.css
+++ b/static/css/style.css
@@ -41,10 +41,6 @@ body {
     color: grey;
 }
 
-#id_content {
-    
-}
-
 #nav a {
     margin: 0 20px 0 20px;
     color: black;
@@ -75,9 +71,12 @@ body {
 
 #user-block img {
     width: 50px;
-    height: auto;
-    margin: 0 20px 0 0;
-    border-radius: 50px;
+    background-color: #ddd;
+    border-radius: 100%;
+    height: 50px;
+    object-fit: cover;
+    width: 50px;  
+    margin: 0 10px 0 0;
 }
 
 #tuite-text {
@@ -90,14 +89,28 @@ body {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: space-between;
     padding: 20px 0 20px 0;
 }
 
-#reactions img{
+#reactions div {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    padding: 20px 0 20px 0;
+}
+
+#reactions div img{
+    transition: all 0.1s linear;
     width: 15px;
     height: auto;
-    padding: 0 10px 0 0;
+    padding: 0 10px 3px 0;
+}
+
+#reactions div img:hover{
+    cursor: pointer;
+    transform: scale(1.1);
 }
 
 #gambiarra {
@@ -164,18 +177,21 @@ button, input[type="submit"], input[type="reset"] {
     background: none;
     color: inherit;
     border: none;
-    padding: 0;
     font: inherit;
     cursor: pointer;
     outline: inherit;
 }
 
-#profile-image {
-    margin: 10px 0 10px 0;
-    border-radius: 50px;
+.profile-image {
+    background-color: #ddd;
+    border-radius: 100%;
+    height: 100px;
+    object-fit: cover;
+    width: 100px;  
+    margin: 20px;
 }
 
-#mail-text {
+.profile-text {
     padding: 10px 0 10px 0;
 }
 
