--- a/templates/includes/menu.html
+++ b/templates/includes/menu.html
@@ -7,6 +7,9 @@
     <div id="nav-buttons">
         <a href="{% url 'index' %}">Início</a>
         <a href="{% url 'tuites:post_tuite' %}">Postar Turite</a>
+        {% if request.user.is_superuser %}
+            <a href="/admin"> Painel Admin</a>
+        {% endif %}
         {% if user.is_authenticated %}
             <a href="{% url 'users:profile' request.user.pk %}"> {{ request.user.username }}</a>
             <a href="{% url 'users:logout' %}"> Sair</a>
