--- a/templates/login.html
+++ b/templates/login.html
@@ -1,9 +1,11 @@
 {% extends 'base.html' %}
 
 {% block body %}
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="ENTRAR">
-    </form>
+    <div class="card" id="login-card">
+        <form method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <input type="submit" value="ENTRAR">
+        </form>
+    </div>
 {% endblock %}
