--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,8 +1,10 @@
 {% extends 'base.html' %}
  {% block body %}
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="Registrar">
-    </form>
+    <div class="card" id="login-card">
+        <form method="post" style="width: 500px">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <input type="submit" value="Registrar">
+        </form>
+    </div>
 {% endblock %} 
