--- a/templates/single_tuite.html
+++ b/templates/single_tuite.html
@@ -3,7 +3,7 @@
 
 {% block body %}
     <div class="back-container" id="single-tuite-back">
-        <a href="{% url 'tuites:list' %}">
+        <a href="{% url 'tuites:home' %}">
             <img src="{% static 'img/left-arrow.png' %}" alt="">
             Voltar a todos os tuites
         </a>
