Alterações na tela de perfil

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -4,7 +4,7 @@
 
 {% block body %}
     {% if request.user.pk == profile.pk %}
-        <h3>Bem vindo ao seu perfil!</h3>
+        <h3 id="welcome">Bem vindo ao seu perfil!</h3>
     {% endif %}
     <div class="profile-container">
         <div>
@@ -19,29 +19,34 @@
         <div>
             <div class="profile-text1">
                 Seguidores: {{ profile.following_count }}
-                <div class="profile-text-list1">
-                    {% for friend in profile.following.all %}
-                        <div class="friend-text-list-cell">
-                           <a href="{% url 'users:profile' friend.pk %}">{{ friend }}</a>
-                        </div>
-                    {% endfor %}
-                </div>
+                {% if profile.following_count > 0 %}
+                    <div class="profile-text-list1">
+                        {% for friend in profile.following.all %}
+                            <div class="friend-text-list-cell">
+                            <a href="{% url 'users:profile' friend.pk %}">{{ friend }}</a>
+                            </div>
+                        {% endfor %}
+                    </div>
+                    {% endif %}
             </div>
             <div class="profile-text2">
                 Seguindo: {{ profile.followers_count }}
-                <div class="profile-text-list2">
-                    {% for friend in profile.followers.all %}
-                        <div class="friend-text-list-cell">
-                           <a href="{% url 'users:profile' friend.pk %}">{{ friend }}</a>
-                        </div>
-                    {% endfor %}
-                </div>
+                {% if profile.followers_count > 0 %}
+                    <div class="profile-text-list2">
+                        {% for friend in profile.followers.all %}
+                            <div class="friend-text-list-cell">
+                            <a href="{% url 'users:profile' friend.pk %}">{{ friend }}</a>
+                            </div>
+                        {% endfor %}
+                    </div>
+                {% endif %}
             </div>
         </div>
         <div>
-            <a href="{% url 'users:follow' profile.pk %}" class="follow-button">{% followingBool profile.pk %}</a>
             {% if profile == request.user %}
                 <a id="edit-link" href="{% url 'users:edit' request.user.pk %}">Editar Perfil</a>
+            {% else %}
+                <a href="{% url 'users:follow' profile.pk %}" class="follow-button">{% followingBool profile.pk %}</a>
             {% endif %}
         </div>
     </div>
