--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -1,3 +1,7 @@
+#welcome {
+    padding-top: 10px;
+}
+
 .profile-container {
     display: flex;
     flex-direction: row;
@@ -63,7 +67,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    right: -123px;
+    right: -122px;
     width: 100px;
     top: 0;
     padding: 10px;
