--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -68,6 +68,7 @@
     align-items: center;
     justify-content: space-around;
     right: -122px;
+    transition: all 0.2s linear;
     width: 100px;
     top: 0;
     padding: 10px;
