Mudança no nome da pag e adição do icone

--- a/templates/includes/menu.html
+++ b/templates/includes/menu.html
@@ -2,7 +2,7 @@
 <nav id="nav">
     <a href="{% url 'index' %}" id="logo">
         <img src="{% static 'img/albatross.svg' %}" alt="">
-        <h1 id="logomarca">Tuirer</h1>
+        <h1 id="logomarca">Turiter</h1>
     </a>
     <div id="nav-buttons">
         <a href="{% url 'index' %}">Início</a>
